# google-cloud-rust

./: .dockerignore  .sidekick.toml  .typos.toml  Cargo.toml  librarian.yaml
.gcb/: integration.yaml
benchmarks/storage/random/: Cargo.toml  README.md
benchmarks/storage/random/src/: args.rs  bidi.rs  dataset.rs  experiment.rs  json.rs  main.rs  names.rs  sample.rs
demos/apphub/: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
demos/apphub/src/: args.rs  error.rs  logs.rs  main.rs  observability.rs  state.rs
generator/internal/api/: model.go  xref.go
generator/internal/language/: rust.go  rust_test.go  rusttemplate.go
generator/internal/parser/: mixin.go
generator/internal/rust/: annotate.go  codec.go  codec_test.go  rust.go  rust_test.go  rusttemplate.go  rusttemplate_test.go
generator/internal/rust_prost/: annotate.go  generate.go  rust_prost.go  rust_prost_test.go
generator/internal/rust_prost/templates/: convert.rs.mustache  enum.mustache
generator/internal/sidekick/: refresh.go  sidekick_rust_prost_test.go
generator/sidekick/: config.go  generate.go  refreshall.go  sidekick.go  sidekick_test.go
generator/testdata/rust/: .gitignore
guide/samples/: Cargo.toml
guide/samples/tests/: prediction.rs  storage.rs
guide/samples/tests/storage/: striped.rs
guide/src/storage/: striped_downloads.md
placeholder/: Cargo.toml
placeholder/src/: main.rs
skills/google-cloud-rust/: SKILL.md
skills/google-cloud-rust/references/: authentication.md  client-setup.md  errors.md  lro.md  mocking.md  storage.md
src/auth/: Cargo.toml  README.md
src/auth/src/: lib.rs
src/auth/src/credentials/: external_account.rs  service_account.rs
src/auth/tests/: combine.rs
src/bigtable/: Cargo.toml  build.rs
src/bigtable/src/: generated.rs  lib.rs
src/conceal/: Cargo.toml
src/conceal/src/: builder.rs  client.rs  lib.rs  model.rs  server.rs  stubs.rs  traits.rs  transport.rs
src/conceal/tests/: basic_requests.rs
src/endurance-test/src/: main.rs
src/firestore/: .gitignore  Cargo.toml
src/firestore/src/: lib.rs
src/firestore/src/model/: mod.rs
src/firestore/tests/: simple_request.rs
src/gax/: Cargo.toml
src/gax-internal/: Cargo.toml
src/gax-internal/echo-server/: Cargo.toml
src/gax-internal/src/: grpc.rs  http.rs  observability.rs
src/gax-internal/src/observability/: attributes.rs  client_signals.rs  client_tracing.rs  http_tracing.rs
src/gax/src/: lib.rs  options.rs  paginator.rs  retry_loop_internal.rs  retry_policy.rs
src/gax/src/http_client/: mod.rs
src/gax/src/options/: mod.rs  retry_policy.rs
src/gax/src/retry/: mod.rs
src/gax/src/retry_policy/: attempt_timeout.rs
src/gax/tests/: echo_server.rs  paginator.rs  retry.rs  timeout.rs
src/integration-tests/: Cargo.toml
src/integration-tests/src/: compute.rs  lib.rs  metrics_scopes.rs  storage.rs  workflows.rs
src/integration-tests/src/builder_based_client/: client.rs  mod.rs  model.rs
src/integration-tests/src/client4/: mod.rs
src/integration-tests/src/client5/: mod.rs
src/integration-tests/src/client6/: mod.rs
src/integration-tests/src/gax4/: mod.rs
src/integration-tests/src/gax5/: mod.rs
src/integration-tests/src/secret_manager/: openapi.rs  openapi_locational.rs  protobuf.rs
src/integration-tests/src/traits_prototype/: mod.rs
src/integration-tests/src/wrapped_execute/: mod.rs
src/integration-tests/src/wrapped_inner_client/: mod.rs
src/integration-tests/tests/: driver.rs  mockable.rs  test4.rs  test6.rs  towerish.rs  traceable.rs  traits.rs
src/lbd/: Cargo.toml  README.md
src/lbd/src/: main.rs
src/lro/: Cargo.toml
src/lro/src/: details.rs  internal.rs  lib.rs
src/protojson-conformance/src/: main.rs
src/prototypes/client-as-trait/: Cargo.toml
src/storage/: Cargo.toml
src/storage-w1r3/: Cargo.toml
src/storage-w1r3/src/: main.rs
src/storage/src/: client.rs  data_source.rs  download_resume_policy.rs  error.rs  generated.rs  lib.rs  model_ext.rs  object_descriptor.rs  read_object.rs  read_resume_policy.rs  retry_policy.rs  storage.rs
src/storage/tests/: bidi_read.rs  mocking.rs
src/test-utils/src/: tracing.rs
src/w1r3/: Cargo.toml
src/w1r3/src/: main.rs
src/wkt/: Cargo.toml
src/wkt-protobuf/: Cargo.toml  README.md
src/wkt-protobuf/src/: lib.rs
src/wkt/src/: any.rs  internal.rs  lib.rs  prost.rs
src/wkt/tests/: complex_oneofs.rs  message_with_bool.rs  message_with_bytes.rs  message_with_enum.rs  message_with_f32.rs  message_with_f64.rs  message_with_field_mask.rs  message_with_i32.rs  message_with_i64.rs  message_with_recursion.rs  message_with_string.rs  message_with_u32.rs  message_with_u64.rs  message_with_value.rs  message_with_wrappers.rs  oneofs.rs
tests/discovery/tests/: driver.rs
tests/integration/src/: storage.rs
tests/integration/tests/: driver.rs
tests/o11y/: Cargo.toml
tests/o11y/src/: detector.rs  e2e.rs  http_tracing.rs  otlp.rs  storage_tracing.rs
tests/o11y/tests/: logs.rs  storage_tracing.rs
tests/pubsub/src/: exactly_once.rs
tests/pubsub/tests/: driver.rs
tests/repro-4677/: Cargo.toml
tests/repro-4677/src/: main.rs
tools/: go.sum
tools/cmd/release-needed/: cargo_tools.go  cargo_tools_test.go  changes.go  changes_test.go  find_cargo_manifests.go  find_cargo_manifests_test.go  main.go  package_info.go  package_info_test.go  preflight.go  preflight_test.go  release_config.go  run_test.go
tools/internal/preflight/: preflight.go  preflight_test.go
tools/key-rotation/: Cargo.toml  Dockerfile  README.md
tools/key-rotation/src/: main.rs
(+144 files in other folders)
