# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name              = "conceal"
description       = "Prototype Client Designs for google-cloud-rust."
version           = "0.0.0"
edition.workspace = true
publish           = false

[dependencies]
auth               = { path = "../../auth", package = "google-cloud-auth" }
gax                = { path = "../../src/gax", package = "gcp-sdk-gax", features = ["unstable-sdk-client"] }
wkt                = { path = "../../src/wkt", package = "gcp-sdk-wkt" }
axum               = "0.7.9"
bytes              = "1.8.0"
futures            = "0.3.31"
lazy_static        = "1.5.0"
reqwest            = "0.12.9"
serde              = { version = "1.0.216", features = ["serde_derive"] }
serde_json         = "1.0.133"
tokio              = { version = "1.42", features = ["test-util", "macros"] }
tracing            = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
test-case = "3.3.1"
