# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name                   = "repro-4677"
version                = "0.0.0"
publish                = false
edition.workspace      = true
authors.workspace      = true
description.workspace  = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true

[dependencies]
anyhow.workspace           = true
futures.workspace          = true
google-cloud-aiplatform-v1 = { workspace = true, features = ["default-rustls-provider", "prediction-service"] }
google-cloud-auth          = { workspace = true, features = ["default", "idtoken"] }
google-cloud-gax           = { workspace = true, features = ["unstable-stream"] }
tokio                      = { workspace = true, features = ["macros"] }

[lints]
workspace = true
