# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name         = "auth-key-rotation"
description  = "Automatically rotate keys for integration tests."
version      = "0.0.0"
edition      = "2024"
rust-version = "1.85.0"
publish      = false

[dependencies]
anyhow.workspace     = true
serde_json.workspace = true
google-cloud-gax              = { path = "../../src/gax" }
google-cloud-wkt              = { path = "../../src/wkt" }
google-cloud-iam-admin-v1     = { path = "../../src/generated/iam/admin/v1" }
google-cloud-secretmanager-v1 = { path = "../../src/generated/cloud/secretmanager/v1" }

[dependencies.tokio]
workspace = true
features  = ["macros", "rt-multi-thread"]
