# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name         = "key-rotation"
description  = "Automatically rotate keys for integration tests."
version      = "0.0.0"
edition      = "2024"
rust-version = "1.85.0"
publish      = false

[dependencies]
anyhow                        = "1"
axum                          = "0.8"
bytes                         = "1"
crc32c                        = "0.6.8"
google-cloud-gax              = "0.21"
google-cloud-iam-admin-v1     = "0.2" 
google-cloud-secretmanager-v1 = "0.2" 
google-cloud-wkt              = "0.3" 
http                          = "1"
serde_json                    = "1"

[dependencies.tokio]
version  = "1"
features = ["macros", "rt-multi-thread"]
